syntax = "proto3";

package pb;

option go_package = "userpb";

service UserService {
    rpc CreateUser (CreateUserRequest) returns (CreateUserResponse) {
    }
    rpc GetUserByID (GetUserRequest) returns (GetUserResponse) {
    }
    rpc GetUsersList (GetUsersListRequest) returns (GetUsersListResponse) {
    }
}
message User {
    string id = 1;
    string user_name = 2;
    bytes created_at = 3;

}

message CreateUserRequest {
    string user_name = 1;
}

message CreateUserResponse {
    User user = 1;
}

message GetUserRequest {
    string id = 1;
}

message GetUserResponse {
    User user = 1;
}

message GetUsersListRequest {

}

message GetUsersListResponse {
    repeated User users = 1;
}

